# thread_pool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/include/: thread_pool-config.cmake.in  thread_pool.h
src/source/: thread_pool.c
test/: CMakeLists.txt  thread_pool_test.c
